[gd_scene load_steps=13 format=3 uid="uid://imkk6qltwdef"]

[ext_resource type="Texture2D" uid="uid://dvnqrjw8phdyh" path="res://Swords/Sword.png" id="1_567w3"]
[ext_resource type="Script" path="res://Hitbox/hitboxSword.gd" id="1_s0xhe"]
[ext_resource type="AudioStream" uid="uid://b6d3ixvr762t7" path="res://sounds/swordClash.wav" id="3_sldcb"]
[ext_resource type="AudioStream" uid="uid://d2uvuyp3soc27" path="res://sounds/Coin1.wav" id="4_su5mk"]
[ext_resource type="AudioStream" uid="uid://dcfdluvxrtnq6" path="res://sounds/coin2.wav" id="5_tafg7"]
[ext_resource type="AudioStream" uid="uid://cvm6y1ynkmv5n" path="res://sounds/coin3.wav" id="6_qv44g"]
[ext_resource type="AudioStream" uid="uid://cvvb7jpft30xk" path="res://sounds/coin4.wav" id="7_ldwt4"]
[ext_resource type="AudioStream" uid="uid://b1rejqdpftc0x" path="res://sounds/coin5.wav" id="8_8bsjw"]
[ext_resource type="AudioStream" uid="uid://byd2y6vgl8lkd" path="res://sounds/coin6.wav" id="9_4ukip"]
[ext_resource type="AudioStream" uid="uid://chsbqgp7xe1r0" path="res://sounds/coin7.wav" id="10_yjpew"]
[ext_resource type="AudioStream" uid="uid://c5yt1qlsj1t0k" path="res://sounds/coinDeath.wav" id="11_2al40"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4c4og"]
size = Vector2(56, 125)

[node name="PendulumSword" type="Node2D"]
script = ExtResource("1_s0xhe")

[node name="Sword" type="Sprite2D" parent="."]
position = Vector2(-3, -25)
texture = ExtResource("1_567w3")

[node name="Hitbox" type="Area2D" parent="."]

[node name="Hitbox_Shape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-3, -25.5)
shape = SubResource("RectangleShape2D_4c4og")

[node name="swordClash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_sldcb")
bus = &"Sound"

[node name="coin1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_su5mk")
bus = &"Sound"

[node name="coin2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_tafg7")
bus = &"Sound"

[node name="coin3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_qv44g")
bus = &"Sound"

[node name="coin4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ldwt4")
bus = &"Sound"

[node name="coin5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_8bsjw")
bus = &"Sound"

[node name="coin6" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_4ukip")
bus = &"Sound"

[node name="coin7" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_yjpew")
bus = &"Sound"

[node name="coinDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_2al40")
bus = &"Sound"

[connection signal="area_entered" from="Hitbox" to="." method="_on_sword_clash"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
